--- a/index.html
+++ b/index.html
@@ -29,13 +29,27 @@
                     <label for="email">E-mail:</label>
                     <input type="text" name="email" id="email" placeholder="johndoe@example.com" required>
                     <label for="pass">Password:</label>
-                    <input type="password" name="pass" id="pass" required pattern=".{6,}"
+                    <input type="password" name="pass" id="pass" placeholder="Type a password" required pattern=".{6,}"
                      title="Password must be above 6 characters">
                     <label for="vpass">Verify Password:</label>
                     <input type="password" name="vpass" id="vpass" placeholder="Type your password again" required pattern=".{6,}"
                     title="Password must be above 6 characters"> 
                 </div>
             </fieldset>
+            <fieldset>
+                <legend>Contact</legend>
+                <div>
+                    <label for="add">Address:</label>
+                    <input type="text" name="add" id="add" placeholder="e.g Cortez Blanco">
+                    <label for="cit">City:</label>
+                    <input type="text" name="cit" id="cit">
+                    <label for="cou">Country:</label>
+                    <input type="text" name="cou" id="cou" required>
+                    <label for="tel">Telephone number:</label>
+                    <input type="tel" name="tel" id="tel"> 
+                </div>
+            </fieldset>
+            <input type="submit" value="Send">
         </fieldset>
     </form>
 </body>
